[package]
name = "factorio-ruins-patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dirs = "5.0.1"
regex = "1.8.4"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
phf = { version = "0.11", features = ["macros"] }
itertools = "0.11.0"
similar = { version = "2.2.1", features = ["inline"] }
console = "0.15.7"

[build-dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
